# CricketEC

./: .gitignore  download_dataset.py  hook_pull_xgboost.py  main.py  pyproject.toml
code/: dataset.py  precompute_pixel_intensity_indices.py  train.py  train_effnet.py  train_resnet34.py  train_video_resnet.py  utils.py
code/models/: __init__.py  cricket_ec_model.py  video_resnet.py
preprocessing/: video2tensor.py
yolo/: generate_keypoints.py  keypoints.py
