[project]
name = "cricketec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "decord>=0.6.0",
    "gdown>=5.2.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.228",
    "xgboost>=3.1.2",
]


[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
